--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <script src="indext.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./assets/coolsaleh">
+    <link rel="icon" type="image/x-icon" href="./assets/download (1).jpg">
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
@@ -22,7 +22,7 @@
     <section id="landing-page" onmousemove="moveBackground(event)">
         <nav>
             <figure>
-                <img id='personal-logo'src="./assets/download (1).jpg" alt="">
+                
             </figure>
             <ul class="nav__link--list">
                 <li class="nav__link" onclick="toggleModal()">
